# deployerAI

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.github/workflows/: main.yml
.idx/: dev.nix
backend/: pyproject.toml
docs/: blueprint.md
public/: finisher-header.es5.min.js
src/ai/: dev.ts
src/ai/agents/: agent_orchestrator.py  code_checker.py  dockerfile_generator.py  dockerfile_verifier.py
src/ai/flows/: ai-autocomplete.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/deploy/: route.ts
src/app/api/push/: route.ts
src/components/: code-editor.tsx  language-selector.tsx
src/components/effects/: finisher-header-client.tsx
src/components/ui/: sidebar.tsx  textarea.tsx  tooltip.tsx
