[tool.poetry]
name = "code-weaver-python"
version = "0.1.0"
description = "Python dependencies for Code Weaver AI Editor"
authors = ["sjnayeh <sirinejnayehh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9" # Specify the Python version you are using

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
