[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["JNAYEH Sirine <sirine.jnayeh@esprit.tn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.25"
langgraph = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
